--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite-plugin-symfony": "^8.2"
     },
     "dependencies": {
+        "@hello-pangea/dnd": "^18.0.1",
         "@inertiajs/react": "",
         "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-alert-dialog": "^1.1.15",
