--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.2.0",
+        "@types/lodash.groupby": "^4.6.9",
+        "@types/lodash.throttle": "^4.1.9",
         "@types/node": "^25.0.3",
         "@types/react": "",
         "@types/react-dom": "",
@@ -15,12 +18,15 @@
         "vite-plugin-symfony": "^8.2"
     },
     "dependencies": {
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/modifiers": "^9.0.0",
         "@hello-pangea/dnd": "^18.0.1",
         "@inertiajs/react": "",
         "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-avatar": "^1.1.11",
         "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-context-menu": "^2.2.16",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-dropdown-menu": "^2.1.16",
         "@radix-ui/react-label": "^2.1.8",
@@ -31,12 +37,18 @@
         "@radix-ui/react-slot": "^1.2.4",
         "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-tooltip": "^1.2.8",
+        "@tabler/icons-react": "^3.36.1",
         "@tailwindcss/vite": "^4.1.18",
+        "@tanstack/react-table": "^8.21.3",
         "@toyokumo/fos-router": "",
+        "@uidotdev/usehooks": "^2.4.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "date-fns": "^4.1.0",
+        "jotai": "^2.16.1",
+        "lodash.groupby": "^4.6.0",
+        "lodash.throttle": "^4.1.1",
         "lucide-react": "^0.562.0",
         "react": "",
         "react-day-picker": "^9.13.0",
